2013-01-24  Ryosuke Niwa  <rniwa@webkit.org>

        Mac build fix after r140752.

        * DerivedSources.make:

2013-01-24  Jae Hyun Park  <jae.park@company100.net>

        Redundant LegacyReceiver attribute in WebPage.messages.in
        https://bugs.webkit.org/show_bug.cgi?id=107875

        Reviewed by Anders Carlsson.

        To generate WebPageMessageReceiver with legacy, just one LegacyReceiver
        attribute in WebPage.messages.in is enough. This patch removes this
        redundant attribute.

        * WebProcess/WebPage/WebPage.messages.in:

2013-01-24  Anders Carlsson  <andersca@apple.com>

        Fix release build.

        * WebProcess/Storage/StorageAreaProxy.cpp:
        (WebKit::StorageAreaProxy::length):

2013-01-24  Alexey Proskuryakov  <ap@apple.com>

        <rdar://problem/9971916> [WK2] Update sandbox extension usage
        https://bugs.webkit.org/show_bug.cgi?id=107861

        Reviewed by Sam Weinig.

        * Shared/SandboxExtension.h:
        * Shared/mac/SandboxExtensionMac.mm:
        (WebKit::wkSandboxExtensionType):
        * UIProcess/Downloads/DownloadProxy.cpp:
        (WebKit::DownloadProxy::decideDestinationWithSuggestedFilename):
        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::createNewWebProcess):
        (WebKit::WebContext::processDidFinishLaunching):
        (WebKit::WebContext::startMemorySampler):
        * WebProcess/com.apple.WebProcess.sb.in:

2013-01-24  Brady Eidson  <beidson@apple.com>

        Move Authentication and Downloads from WebProcess to Shared.
        https://bugs.webkit.org/show_bug.cgi?id=107879

        Reviewed by Anders Carlsson.

        * Shared/Authentication/AuthenticationManager.cpp: Renamed from Source/WebKit2/WebProcess/Authentication/AuthenticationManager.cpp.
        * Shared/Authentication/AuthenticationManager.h: Renamed from Source/WebKit2/WebProcess/Authentication/AuthenticationManager.h.